= Changelog

== v2022.11.0 (unreleased)

=== Architectural decision records

- [ADR-069] Add support for children layout strategy
- [ADR-070] How to contribute a new diagram node style
- [ADR-071] Add parametric SVG node style
- [ADR-072] Add support for the edition of routing points

 - https://github.com/eclipse-sirius/sirius-components/issues/1368[#1368] [diagram] Do not render rectangle view children twice
 
=== Breaking changes

- https://github.com/eclipse-sirius/sirius-components/issues/1300[#1300] [core] Rename SiriusWebJSONResourceFactoryImpl to JSONResourceFactoryImpl

=== Dependency update

=== Bug fixes

=== Improvements

- https://github.com/eclipse-sirius/sirius-components/issues/1339[#1339] [layout] Add concept of layout strategy. The purpose of layout strategy is to split the style of a node from the way a node lays out its children.
- https://github.com/eclipse-sirius/sirius-components/issues/1385[#1385] [releng] Migrate Sirius Web to Sirius Component. The purpose of this migration is to facilitate the maintenance of these two projects (one pull request instead of two different).
- https://github.com/eclipse-sirius/sirius-components/issues/997[#997] [diagram] Edge routing points are not reset when one of the edge end is moving

=== New Features

- https://github.com/eclipse-sirius/sirius-components/issues/1316[#1316] [diagram] Support parametric svg node style

- https://github.com/eclipse-sirius/sirius-components/issues/997[#997] [diagram] Add support for edition of routing points in diagrams

== v2022.9.0

=== Architectural decision records

- [ADR-067] Add support for injecting platform services/beans into Java service classes used by studios
- [ADR-068] Improve support for precondition expression from representation description

=== Breaking changes
