@@ -14,6 +14,9 @@ package org.eclipse.sirius.components.emf.services;
 
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.function.Predicate;
 
 import org.eclipse.emf.common.util.URI;
 import org.eclipse.emf.ecore.resource.impl.ResourceFactoryImpl;
@@ -30,9 +33,42 @@ public class JSONResourceFactory extends ResourceFactoryImpl {
 
     @Override
     public JsonResource createResource(URI uri) {
+        // @formatter:off
+        Optional.ofNullable(uri)
+            .map(URI::scheme)
+            .filter(Objects::nonNull)
+            .filter(Predicate.not(String::isEmpty))
+            .orElseThrow(() -> new IllegalArgumentException(String.format("Missing scheme for URI %s", uri))); //$NON-NLS-1$
+         // @formatter:on
+
         Map<String, Object> options = new HashMap<>();
 
         options.put(JsonResource.OPTION_ID_MANAGER, new EObjectIDManager());
+        options.put(JsonResource.OPTION_DISPLAY_DYNAMIC_INSTANCES, true);
+
         return new JsonResourceImpl(uri, options);
+    }
+
+    /**
+     * Create a resource which URI is made of a correct scheme and the given id as path.
+     *
+     * @param path
+     *            the path of the resource
+     */
+    public JsonResource createResourceFromPath(String path) {
+        URI uri = this.createResourceURI(path);
+
+        return this.createResource(uri);
+    }
+
+    /**
+     * Create an URI with a correct scheme and the given id as path.
+     *
+     * @param resourceId
+     *            the id of the resource
+     */
+    public URI createResourceURI(String resourceId) {
+        // There are three slashes because the URI authority is empty
+        return URI.createURI(EditingContext.RESOURCE_SCHEME + ":///" + resourceId); //$NON-NLS-1$
     }
 }
